fixed spacing issues

--- a/src/styles/navigationStyles.css
+++ b/src/styles/navigationStyles.css
@@ -7,7 +7,7 @@
   background-color: black;
   color: white;
   width: 100%;
-  min-height: 150px;
+  min-height: 90px;
 }
 
 
